hphp/hack/test/typecheck/goto/goto_disallow_cross_method_reference.php
<?hh // partial

class Foo {

  public function labelDeclaration(): void {
    L0:
  }

  public function labelReference(): void {
    goto L0;
  }
}
